Fixing things on smaller screens

--- a/assets/sass/module/_files-list.scss
+++ b/assets/sass/module/_files-list.scss
@@ -2,16 +2,84 @@
 .files-list {
 	background:    #fff;
 	border-radius: 0.4em;
-	margin:        0.25em 0 0 0;
-	padding:       0.5em;
+	margin:        0.25em 0;
+	padding:       0.5em 0;
 	text-indent:   0;
+
+	&:last-child {
+		margin-bottom: 0;
+	}
 }
 
 	.files-item {
-		color:       $color-primary;
-		margin-left: 1.25em;
+		@extend %clearfix;
+		border-top: 1px dotted rgba($color-primary, 0.25);
+		color:      $color-primary;
+		list-style: none;
+		margin:     0;
+		padding:    0 0.75em;
+
+		&:first-child {
+			border: none;
+		}
+
+		&:hover {
+			background: rgba($color-primary, 0.05);
+		}
+
+		&.materials {
+			text-align: center;
+
+			&:hover {
+				background: none;
+			}
+		}
 
 		.world & {
-			color: $color-highlight;
+			border-top-color: rgba($color-highlight, 0.25);
+			color:            $color-highlight;
+
+			&:hover {
+				background: rgba($color-highlight, 0.05);
+			}
+		}
+
+
+		@media screen and (min-width: 501px) {
+			span {
+				display: none;
+			}
 		}
 	}
+
+		.files-link {
+			@media screen and (min-width: 501px) {
+				&.pdf {
+					float: right;
+				}
+			}
+
+			&.materials {
+				background:    $color-primary;
+				border-radius: 0.5em;
+				color:         #fff;
+				display:       inline-block;
+				float:         none;
+				line-height:   2em;
+				margin:        1em auto 0.5em;
+				padding:       0 1em;
+
+				&:hover {
+					background:      rgba($color-primary, 0.85);
+					text-decoration: none;
+				}
+
+				.world & {
+					background: $color-highlight;
+
+					&:hover {
+						background: rgba($color-highlight, 0.85);
+					}
+				}
+			}
+		}
