--- a/assets/sass/module/_legal-notice.scss
+++ b/assets/sass/module/_legal-notice.scss
@@ -1,7 +1,7 @@
 
 .legal-notice {
-	background:    rgba($color-highlight, 0.05);
-	border:        1px dashed $color-highlight;
+	background:    rgba($color-primary, 0.05);
+	border:        1px dashed $color-primary;
 	border-radius: 15px;
 	margin-bottom: 1em;
 	padding:       0.5em;
@@ -10,5 +10,10 @@
 		font-size: 0.65em;
 		margin:    0;
 		max-width: none;
+	}
+
+	.world & {
+		background:   rgba($color-highlight, 0.05);
+		border-color: $color-highlight;
 	}
 }
