--- a/assets/sass/module/_projects-list.scss
+++ b/assets/sass/module/_projects-list.scss
@@ -12,15 +12,31 @@
 		list-style:    none;
 		margin:        0 0 1em;
 		padding:       0.25em;
-		text-indent:   0.65em;
 
 		.world & {
 			background: $color-highlight;
 		}
 	}
 
-		.projects-level {
-			float:          right;
-			padding-right:  0.65em;
-			text-transform: uppercase;
+		.projects-title {
+			display:     block;
+			line-height: 2;
+			margin-left: 0.75em;
 		}
+
+			.projects-level {
+				white-space: nowrap;
+
+				&:before {
+					content: ' \2014  ';
+				}
+
+				@media screen and (min-width: 501px) {
+					float:         right;
+					padding-right: 0.65em;
+
+					&:before {
+						content: '';
+					}
+				}
+			}
